--- a/Trades_to_chart.ipynb
+++ b/Trades_to_chart.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 294,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T18:47:07.228721Z",
@@ -262,26 +262,50 @@
     "    excel_df = storage_of_executions\n",
     "    reindex = {a : b for a, b in zip(range(22), excel_df.iloc[2, :])} # вторая строка, 22 колонки в файле эксель\n",
     "    excel_df = excel_df.rename(columns=reindex)\n",
+    "    \n",
+    "    date_re = re.compile(r'\\d{1,2}/\\d{1,2}/\\d{4}')\n",
+    "    options_re = re.compile(r'^\\+([\\w/]+)\\s{1,2}-\\s.*')\n",
+    "    ticker_re = re.compile(r'^([\\w/]+)\\s{1,2}-\\s.*')\n",
+    "    time_re = re.compile(r'\\d\\d:\\d\\d:\\d\\d')\n",
+    "    \n",
+    "    options = False\n",
     "    for i in range(len(excel_df)):\n",
     "        if pd.notna(excel_df.iloc[i][0]):\n",
-    "            if re.match(r'\\d{1,2}/\\d{1,2}/\\d{4}', excel_df.iloc[i][0]): #дата\n",
-    "                date = excel_df.iloc[i][0]\n",
-    "                file_parsing[date] = {}\n",
-    "                continue\n",
+    "            if options == False:            \n",
+    "                if re.match(date_re, excel_df.iloc[i][0]): #дата\n",
+    "                    date = excel_df.iloc[i][0]\n",
+    "                    file_parsing[date] = {}\n",
+    "                    continue\n",
+    "            \n",
+    "                elif re.match(options_re, excel_df.iloc[i][0]): #опционы\n",
+    "                    options = True\n",
+    "                    continue\n",
     "\n",
-    "            elif re.match(r'^([\\w/]+)\\s{1,2}-\\s.*', excel_df.iloc[i][0]): # если тикер\n",
-    "                ticker = re.match(r'^([\\w/]+)\\s{1,2}-\\s.*', excel_df.iloc[i][0])[1]\n",
-    "                file_parsing[date][ticker] = pd.DataFrame()\n",
-    "                continue\n",
+    "                elif re.match(ticker_re, excel_df.iloc[i][0]): # если тикер\n",
+    "                    ticker = re.match(ticker_re, excel_df.iloc[i][0])[1]\n",
+    "                    file_parsing[date][ticker] = pd.DataFrame()\n",
+    "                    continue\n",
     "\n",
-    "            elif excel_df.iloc[i][0] == 'Time':\n",
+    "                elif excel_df.iloc[i][0] == 'Time':\n",
     "\n",
-    "                file_parsing[date][ticker].reindex(columns=excel_df.iloc[i])\n",
-    "                columns = excel_df.iloc[i]\n",
-    "                continue\n",
+    "                    file_parsing[date][ticker].reindex(columns=excel_df.iloc[i])\n",
+    "                    columns = excel_df.iloc[i]\n",
+    "                    continue\n",
     "\n",
-    "            elif re.match(r'\\d\\d:\\d\\d:\\d\\d', excel_df.iloc[i][0]): #Время\n",
-    "                file_parsing[date][ticker] = file_parsing[date][ticker].append(excel_df.iloc[i, :])\n",
+    "                elif re.match(time_re, excel_df.iloc[i][0]): #Время\n",
+    "                    file_parsing[date][ticker] = file_parsing[date][ticker].append(excel_df.iloc[i, :])\n",
+    "                    \n",
+    "            else:\n",
+    "                if re.match(date_re, excel_df.iloc[i][0]):\n",
+    "                    options = False\n",
+    "                    date = excel_df.iloc[i][0]\n",
+    "                    file_parsing[date] = {}\n",
+    "                    \n",
+    "                elif re.match(ticker_re, excel_df.iloc[i][0]):\n",
+    "                    options = False\n",
+    "                    ticker = re.match(ticker_re, excel_df.iloc[i][0])[1]\n",
+    "                    file_parsing[date][ticker] = pd.DataFrame()\n",
+    "                    \n",
     "    date_ticker_exec = normalise_formats(file_parsing)\n",
     "    return date_ticker_exec"
    ]
@@ -333,7 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chart_with_needed_dates(chart_df, date_of_trade):\n",
+    "    return chart_df[(chart_df.Date_Time.apply(lambda x: x.date()) >= date_of_trade.date()) &\n",
+    "      (chart_df.Date_Time.apply(lambda x: x.date()) < date_of_trade.date().replace(day=date_of_trade.day+1))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T22:33:43.551219Z",
@@ -343,7 +378,8 @@
    },
    "outputs": [],
    "source": [
-    "def make_main_chart(needed_chart, drawing_trades, spy_chart):\n",
+    "def make_main_chart(needed_chart, drawing_trades, spy_needed_chart):\n",
+    "    \n",
     "    buy_executions = drawing_trades.loc[drawing_trades['B_S'].isin(['B', 'C'])]\n",
     "    sell_executions = drawing_trades.loc[drawing_trades['B_S'].isin(['S', 'T'])]\n",
     "    chart_1m = go.Candlestick(x=needed_chart.Date_Time,\n",
@@ -378,11 +414,11 @@
     "                                          \"width\": 1}},\n",
     "                          hoverinfo=\"x+y\", visible=\"legendonly\", yaxis='y')\n",
     "    \n",
-    "    spy_chart_candlestick = go.Candlestick(x=spy_chart.Date_Time,\n",
-    "                           open=spy_chart.Open,\n",
-    "                           high=spy_chart.High,\n",
-    "                           low=spy_chart.Low,\n",
-    "                           close=spy_chart.Close,\n",
+    "    spy_chart_candlestick = go.Candlestick(x=spy_needed_chart.Date_Time,\n",
+    "                           open=spy_needed_chart.Open,\n",
+    "                           high=spy_needed_chart.High,\n",
+    "                           low=spy_needed_chart.Low,\n",
+    "                           close=spy_needed_chart.Close,\n",
     "                          name='SPY', \n",
     "                          decreasing = {\"fillcolor\": \"rgb(227, 14, 0)\", \n",
     "                                        \"line\": {\n",
@@ -394,7 +430,7 @@
     "                                          \"width\": 1}},\n",
     "                          hoverinfo=\"x+y\", xaxis='x', yaxis='y3')\n",
     "    \n",
-    "    #spy_line = go.Line(x=spy_chart.Date_Time, y=spy_chart.Close, name=\"SPY_line\", xaxis='x', yaxis='y4')\n",
+    "    #spy_line = go.Line(x=spy_needed_chart.Date_Time, y=spy_needed_chart.Close, name=\"SPY_line\", xaxis='x', yaxis='y4')\n",
     "    \n",
     "    text_lambda = lambda x: [f'{i.B_S}: {int(i.Qty)}, Pos_Size: {i.Pos_Size}' for i in x.itertuples()]\n",
     "    \n",
@@ -548,13 +584,14 @@
     "        ]\n",
     "                   ]\n",
     "    }\n",
-    "    \n",
-    "    plot(dict(data=data, layout=layout), filename=f'{buy_executions.Date_Time.iloc[0].strftime(\"%Y-%m-%d\")}_{buy_executions.Ticker[0]}.html')"
+    "    filename = f'{buy_executions.Date_Time.iloc[0].strftime(\"%Y-%m-%d\")}_{buy_executions.Ticker[0]}.html'\n",
+    "    plot(dict(data=data, layout=layout), auto_open=True, filename=filename)\n",
+    "    return filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 319,
    "metadata": {
     "scrolled": false
    },
@@ -573,6 +610,16 @@
       "\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2018-08-06_ARLO.html'"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -588,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 295,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T18:47:30.825070Z",
@@ -607,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 296,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T22:11:48.608008Z",
@@ -626,7 +673,7 @@
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "\n",
-      "E:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning:\n",
+      "E:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\ipykernel_launcher.py:11: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -634,7 +681,7 @@
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "\n",
-      "E:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\ipykernel_launcher.py:11: SettingWithCopyWarning:\n",
+      "E:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -648,7 +695,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.1 s\n"
+      "Wall time: 9.54 s\n"
      ]
     }
    ],
@@ -662,214 +709,6 @@
     "\n",
     "opened_file = open_excel(trades_file)\n",
     "date_tickers_exec = preprocessing_trades(opened_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-11T22:11:59.611638Z",
-     "start_time": "2018-11-11T22:11:59.598637Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Ticker</th>\n",
-       "      <th>Time</th>\n",
-       "      <th>Date_Time</th>\n",
-       "      <th>B_S</th>\n",
-       "      <th>Qty</th>\n",
-       "      <th>Gross</th>\n",
-       "      <th>Net</th>\n",
-       "      <th>Route</th>\n",
-       "      <th>BP_Used</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Order_Id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>121819</th>\n",
-       "      <td>3</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:22:20</td>\n",
-       "      <td>2018-08-06 09:22:20</td>\n",
-       "      <td>B</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-1.48</td>\n",
-       "      <td>CROX</td>\n",
-       "      <td>4505.76</td>\n",
-       "      <td>22.529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123167</th>\n",
-       "      <td>5</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:24:03</td>\n",
-       "      <td>2018-08-06 09:24:03</td>\n",
-       "      <td>B</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-0.76</td>\n",
-       "      <td>ARCA</td>\n",
-       "      <td>2231.00</td>\n",
-       "      <td>22.310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128583</th>\n",
-       "      <td>6</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:31:18</td>\n",
-       "      <td>2018-08-06 09:31:18</td>\n",
-       "      <td>B</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-0.56</td>\n",
-       "      <td>NYSE</td>\n",
-       "      <td>2155.00</td>\n",
-       "      <td>21.550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128682</th>\n",
-       "      <td>8</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:31:47</td>\n",
-       "      <td>2018-08-06 09:31:47</td>\n",
-       "      <td>S</td>\n",
-       "      <td>-200.0</td>\n",
-       "      <td>-209.00</td>\n",
-       "      <td>-210.62</td>\n",
-       "      <td>EDGX</td>\n",
-       "      <td>4177.00</td>\n",
-       "      <td>20.885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129324</th>\n",
-       "      <td>7</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:31:41</td>\n",
-       "      <td>2018-08-06 09:31:41</td>\n",
-       "      <td>S</td>\n",
-       "      <td>-200.0</td>\n",
-       "      <td>-233.76</td>\n",
-       "      <td>-235.36</td>\n",
-       "      <td>EDGX</td>\n",
-       "      <td>4272.00</td>\n",
-       "      <td>21.360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137504</th>\n",
-       "      <td>10</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>09:54:53</td>\n",
-       "      <td>2018-08-06 09:54:53</td>\n",
-       "      <td>S</td>\n",
-       "      <td>-200.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-1.60</td>\n",
-       "      <td>ARCA</td>\n",
-       "      <td>4158.00</td>\n",
-       "      <td>20.790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138844</th>\n",
-       "      <td>11</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>10:01:10</td>\n",
-       "      <td>2018-08-06 10:01:10</td>\n",
-       "      <td>S</td>\n",
-       "      <td>-100.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-0.81</td>\n",
-       "      <td>ARCA</td>\n",
-       "      <td>2087.50</td>\n",
-       "      <td>20.875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138963</th>\n",
-       "      <td>12</td>\n",
-       "      <td>ARLO</td>\n",
-       "      <td>10:27:30</td>\n",
-       "      <td>2018-08-06 10:27:30</td>\n",
-       "      <td>B</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>-226.00</td>\n",
-       "      <td>-228.27</td>\n",
-       "      <td>EDGX</td>\n",
-       "      <td>6471.50</td>\n",
-       "      <td>21.572</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          index Ticker      Time           Date_Time B_S    Qty   Gross  \\\n",
-       "Order_Id                                                                  \n",
-       "121819        3   ARLO  09:22:20 2018-08-06 09:22:20   B  200.0    0.00   \n",
-       "123167        5   ARLO  09:24:03 2018-08-06 09:24:03   B  100.0    0.00   \n",
-       "128583        6   ARLO  09:31:18 2018-08-06 09:31:18   B  100.0    0.00   \n",
-       "128682        8   ARLO  09:31:47 2018-08-06 09:31:47   S -200.0 -209.00   \n",
-       "129324        7   ARLO  09:31:41 2018-08-06 09:31:41   S -200.0 -233.76   \n",
-       "137504       10   ARLO  09:54:53 2018-08-06 09:54:53   S -200.0    0.00   \n",
-       "138844       11   ARLO  10:01:10 2018-08-06 10:01:10   S -100.0    0.00   \n",
-       "138963       12   ARLO  10:27:30 2018-08-06 10:27:30   B  300.0 -226.00   \n",
-       "\n",
-       "             Net Route  BP_Used   Price  \n",
-       "Order_Id                                 \n",
-       "121819     -1.48  CROX  4505.76  22.529  \n",
-       "123167     -0.76  ARCA  2231.00  22.310  \n",
-       "128583     -0.56  NYSE  2155.00  21.550  \n",
-       "128682   -210.62  EDGX  4177.00  20.885  \n",
-       "129324   -235.36  EDGX  4272.00  21.360  \n",
-       "137504     -1.60  ARCA  4158.00  20.790  \n",
-       "138844     -0.81  ARCA  2087.50  20.875  \n",
-       "138963   -228.27  EDGX  6471.50  21.572  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "group_by_order(date_tickers_exec[date][ticker])"
    ]
   },
   {
@@ -2648,7 +2487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 297,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T22:12:21.001861Z",
@@ -2662,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 298,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T22:03:24.330165Z",
@@ -2676,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2692,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 300,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-11T22:03:26.948315Z",
@@ -2708,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2725,9 +2564,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Program Files (x86)\\Microsoft Visual Studio\\Shared\\Anaconda3_64\\lib\\site-packages\\plotly\\graph_objs\\_deprecations.py:372: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Line is deprecated.\n",
+      "Please replace it with one of the following more specific types\n",
+      "  - plotly.graph_objs.scatter.Line\n",
+      "  - plotly.graph_objs.layout.shape.Line\n",
+      "  - etc.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "make_main_chart(needed_chart, drawing_trades, spy_needed_chart)"
    ]
@@ -2761,16 +2623,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 326,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 326,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = date_tickers_exec[date][ticker].Pos_Size.loc[a == 0]\n",
+    "len(a.loc[a == 0])"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "<iframe width=\"900\" height=\"800\" frameborder=\"0\" scrolling=\"no\" src=\"//plot.ly/~mkf/31.embed\"></iframe>"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
